--- a/India.API/India.API.csproj
+++ b/India.API/India.API.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\India.Domain\India.Domain.csproj" />
     <ProjectReference Include="..\India.Service\India.Service.csproj" />
   </ItemGroup>
