Add connection string and add state, city domain models

--- a/India.API/appsettings.json
+++ b/India.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AppDB": "Server=(localdb)\\MSSQLLocalDB;Database=IndiaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
